--- a/pages/countdowns.html
+++ b/pages/countdowns.html
@@ -110,7 +110,7 @@
           }[]
         */
         function saveCountdowns() {
-          if (countdowns.length < 1) {
+          if (countdowns.length === 0) {
             localStorage.setItem('countdowns', '');
             return;
           };
@@ -175,9 +175,11 @@
           function newInterval() {
             if (curInterval !== null) clearInterval(curInterval);
             const countdownContChildren = document.querySelectorAll('#countdown-cont > *');
-            if (countdowns.length > 0) {
-              countdownCont.style.display = 'block';
+            if (countdowns.length === 0) {
+              countdownCont.style.display = 'none';
+              return;
             }
+            countdownCont.style.display = 'block';
 
             curInterval = setInterval(() => {
               for (const elem of countdownContChildren) {
