Clarification on unix timestamp being milliseconds instead of in seconds

--- a/pages/countdowns.html
+++ b/pages/countdowns.html
@@ -197,7 +197,7 @@
             <label>Name: </label><input id="main-label-input"></input>
             <button id="input-exit-btn" style="color: black;">x</button>
           </span>
-          <span><label>Insert unix timestamp here:</label><input id="time-add"></input></span>
+          <span><label>Insert unix timestamp (in milliseconds) here:</label><input id="time-add"></input></span>
           <span id="countdown-confirm"><div style="margin-left: 30px">Add new countdown</span>
           `.trim();
 
