--- a/pages/countdowns.html
+++ b/pages/countdowns.html
@@ -198,7 +198,7 @@
             <button id="input-exit-btn" style="color: black;">x</button>
           </span>
           <span><label>Insert unix timestamp (in milliseconds) here:</label><input id="time-add"></input></span>
-          <button id="countdown-confirm"><div style="margin-left: 30px">Add new countdown</button>
+          <button id="countdown-confirm" style="color:black; width: 12em; margin: 0 auto;">Add new countdown</button>
           `.trim();
 
           function countdownInput() {
